<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="terms_of_use">Terms of use</string>
    <string name="refund_policy">Refund policy</string>
    <string name="cookies_policy">Cookies policy</string>
    <string name="source_code">Source code and licenses</string>
</resources>
